@@ -71,7 +71,7 @@ retry:
 		  written, fd);
 	return (-1);
     }
-#if CHANNEL_VERBOSE_DEBUGGING
+#ifdef CHANNEL_VERBOSE_DEBUGGING
     GAM_DEBUG(DEBUG_INFO, "Wrote credential bytes to socket %d\n", fd);
 #endif
     return (written);
@@ -270,7 +270,7 @@ retry:
         gam_client_conn_shutdown(source, conn);
         return (FALSE);
     }
-#if CHANNEL_VERBOSE_DEBUGGING
+#ifdef CHANNEL_VERBOSE_DEBUGGING
     GAM_DEBUG(DEBUG_INFO, "read %d bytes from client\n", ret);
 #endif
 
@@ -838,7 +838,7 @@ gam_client_conn_write(GIOChannel * source, int fd, gpointer data,
 	remaining -= written;
     } while (remaining > 0);
 
-#if CHANNEL_VERBOSE_DEBUGGING
+#ifdef CHANNEL_VERBOSE_DEBUGGING
     GAM_DEBUG(DEBUG_INFO, "Wrote %d bytes to socket %d\n", len, fd);
 #endif
     return (TRUE);
